--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  font-family: Inter;
+  font-family: Helvetica, sans-serif;
 }
 
 .flexCenter {
@@ -31,7 +31,7 @@ body {
 }
 
 .paddings {
-  @apply lg:px-20 py-6 px-5;
+  @apply lg:px-8 py-6 px-5;
 }
 
 ::-webkit-scrollbar {
@@ -125,22 +125,22 @@ body {
 }
 
 .modal_wrapper {
-  @apply flex justify-start items-center flex-col absolute h-[95%] w-full bottom-0 bg-white rounded-t-3xl lg:px-40 px-8 pt-14 pb-72 overflow-auto;
+  @apply flex justify-start items-center flex-col absolute h-[90%] w-full bottom-0 bg-white rounded-t-3xl lg:px-40 px-8 pt-14 pb-72 overflow-auto;
 }
 
 /* Navbar */
 .navbar {
-  @apply py-5 px-8 border-b border-nav-border gap-4;
+  @apply py-2.5 px-8 border-b border-nav-border gap-4;
 }
 
 /* Profile Menu */
 .profile_menu-items {
-  @apply flex-col absolute right-1/2 translate-x-1/2 mt-3 p-7 sm:min-w-[300px] min-w-max rounded-xl bg-white border border-nav-border shadow-menu;
+  @apply flex-col absolute right-1/2 translate-x-1/4 mt-3 p-7 sm:min-w-[300px] min-w-max rounded-xl bg-white border border-nav-border shadow-menu;
 }
 
 /* Profile Card */
 .profile_card-title {
-  @apply justify-end items-end w-full h-1/3 bg-gradient-to-b from-transparent to-black/50 rounded-b-2xl gap-2 absolute bottom-0 right-0 font-semibold text-lg text-white p-4;
+  @apply justify-end items-end w-full h-1/3 bg-gradient-to-b from-transparent to-black/50 rounded-b-md gap-2 absolute bottom-0 right-0 font-semibold text-lg text-white p-4;
 }
 
 /* Project Form */
